--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 			<nav class="expand-navbar">
 				<ul>
-					<li class="active-page">Home</li>
+					<li style="padding-left: 20px;" class="active-page">Home</li>
 					<li class="nav-dropdown">
 						<a href="shop.html" class="nav-dropdown-btn">Shop</a>
 						<ul class="nav-dropdown-content">
