--- a/index.html
+++ b/index.html
@@ -37,11 +37,10 @@
 		</script>
 	</head>
 	<body>
-	<div class="navbar">
+		<div class="navbar">
 			<img src="images/text-logo.png" alt="Rainier Terrariums" class="nav-text-logo">
 			<img src="images/logo.png" alt="Rainier Terrariums" class="nav-logo">
-
-			<nav class="expand-navbar">
+			<nav>
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li class="nav-dropdown">
