--- a/shop-filters/shop-high-low.html
+++ b/shop-filters/shop-high-low.html
@@ -80,12 +80,52 @@
 				<table>
 					<tr>
 						<td class="product">
-							<a href="https://amzn.to/2LREg86" target="_blank">
-								<img src="images/product2.jpg" alt="Mkono" class="product-img">
+							<a href="https://amzn.to/2Ep4ACw" target="_blank">
+								<img src="images/product18.png" alt="iso" class="product-img">
+								<div class="product-description">
+									<p>Critters Direct Live Springtails + Isopods, Combo Package </p>
+									<p>$39.99</p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/2SmWnHr" target="_blank">
+								<img src="images/product24.jpg" alt="led" class="product-img">
+								<div class="product-description">
+									<p>LED Grow Light Strips for Plants,Cholas 36W 132 LEDs</p>
+									<p>$31.99 </p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/2Qhd8SV" target="_blank">
+								<img src="images/product36.jpg" alt="roc" class="product-img">
 								<div class="product-description">
 									<br/>
-									<p>Mkono 3 Pack Mini Glass Geometric Terrarium</p>
-									<p>$23.99</p>
+									<p>Josh's Frogs BioBedding Tropical Bioactive Substrate</p>
+									<p>$29.99</p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/2rzSaVT" target="_blank">
+								<img src="images/Product5.png" alt="exo" class="product-img">
+								<div class="product-description">
+									<br/>
+									<p>EXO-TERRA Nano Wide Terrarium</p>
+									<p>$29.39</p>
+								</div>
+							</a>
+						</td>
+					</tr>
+					<tr>
+						<td class="product">
+							<a href="https://amzn.to/39Kjqlo" target="_blank">
+								<img src="images/product43.jpg" alt="mushro" class="product-img">
+								<div class="product-description">
+									<br/>
+									<p> Powder Orange Isopods Cleanup Crew</p>
+									<p>$26.99</p>
 								</div>
 							</a>
 						</td>
@@ -99,81 +139,43 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2rIoe9X" target="_blank">
-								<img src="images/Product3.png" alt="kook" class="product-img">
+							<a href="https://amzn.to/2rjaUsv" target="_blank">
+								<img src="images/product25.jpg" alt="slant" class="product-img">
 								<div class="product-description">
-									<br/>
-									<p>KooK Geometric Glass Terrarium</p>
-									<p>$21.95</p>
+									<p>GLASS SLANT BOWL/GLASS TERRARIUM SET OF 2</p>
+									<p>$24.99 </p>
 								</div>
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2PI3bfD" target="_blank">
-								<img src="images/product4.jpg" alt="venus" class="product-img">
+							<a href="https://amzn.to/2ZJPdP8" target="_blank">
+								<img src="images/product31.jpg" alt="cor" class="product-img">
 								<div class="product-description">
 									<br/>
-									<p>Nature Gift Store Adult Venus Flytrap </p>
-									<p>$12.85</p>
+									<p>Anchor Hocking 1-Gallon Glass Jar with Cover</p>
+									<p>$24.82</p>
 								</div>
 							</a>
 						</td>
 					</tr>
 					<tr>
 						<td class="product">
-							<a href="https://amzn.to/2rzSaVT" target="_blank">
-								<img src="images/Product5.png" alt="exo" class="product-img">
+							<a href="https://amzn.to/2LREg86" target="_blank">
+								<img src="images/product2.jpg" alt="Mkono" class="product-img">
 								<div class="product-description">
 									<br/>
-									<p>EXO-TERRA Nano Wide Terrarium</p>
-									<p>$29.39</p>
+									<p>Mkono 3 Pack Mini Glass Geometric Terrarium</p>
+									<p>$23.99</p>
 								</div>
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2PjZAW1" target="_blank">
-								<img src="images/product6.png" alt="cute" class="product-img">
+							<a href="https://amzn.to/2EFSTri" target="_blank">
+								<img src="images/product27.png" alt="iso" class="product-img">
 								<div class="product-description">
-									<p>Cute Farms Terrarium Starter Kit</p>
-									<p>$19.95</p>
-								</div>
-							</a>
-						</td>
-						<td class="product">
-							<a href="https://amzn.to/34mNb82" target="_blank">
-								<img src="images/product7.png" alt="mkono2" class="product-img">
-								<div class="product-description">
-									<p>Mkono Plant Terrarium Display Glass Tabletop </p>
-									<p>$11.99</p>
-								</div>
-							</a>
-						</td>
-						<td class="product">
-							<a href="https://amzn.to/36D7dgh" target="_blank">
-								<img src="images/product8.png" alt="Essentials" class="product-img">
-								<div class="product-description">
-									<p>Terrarium Essentials Kit </p>
-									<p>$21.99</p>
-								</div>
-							</a>
-						</td>
-					</tr>
-					<tr>
-						<td class="product">
-							<a href="https://amzn.to/2PiIRm8" target="_blank">
-								<img src="images/product9.png" alt="mini" class="product-img">
-								<div class="product-description">
-									<p>Mini Ferns for Terrariums/Fairy Garden </p>
-									<p>$14.99</p>
-								</div>
-							</a>
-						</td>
-						<td class="product">
-							<a href="https://amzn.to/35lmuC8" target="_blank">
-								<img src="images/product10.png" alt="h" class="product-img">
-								<div class="product-description">
-									<p>H Potter Glass Terrarium </p>
-									<p>$189.50</p>
+									<br/>
+									<p>Pocket Pets Fast Producing Roly Polys</p>
+									<p>$22.99</p>
 								</div>
 							</a>
 						</td>
@@ -236,15 +238,6 @@
 					</tr>
 					<tr>
 						<td class="product">
-							<a href="https://amzn.to/2Ep4ACw" target="_blank">
-								<img src="images/product18.png" alt="iso" class="product-img">
-								<div class="product-description">
-									<p>Critters Direct Live Springtails + Isopods, Combo Package </p>
-									<p>$39.99</p>
-								</div>
-							</a>
-						</td>
-						<td class="product">
 							<a href="https://amzn.to/2RXYLEg" target="_blank">
 								<img src="images/product19.png" alt="rock" class="product-img">
 								<div class="product-description">
@@ -288,15 +281,6 @@
 								<div class="product-description">
 									<p>Exo Terra Coco Husk Terrarium Substrate</p>
 									<p>$3.59</p>
-								</div>
-							</a>
-						</td>
-						<td class="product">
-							<a href="https://amzn.to/2SmWnHr" target="_blank">
-								<img src="images/product24.jpg" alt="led" class="product-img">
-								<div class="product-description">
-									<p>LED Grow Light Strips for Plants,Cholas 36W 132 LEDs</p>
-									<p>$31.99 </p>
 								</div>
 							</a>
 						</td>
@@ -416,16 +400,6 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2Qhd8SV" target="_blank">
-								<img src="images/product36.jpg" alt="roc" class="product-img">
-								<div class="product-description">
-									<br/>
-									<p>Josh's Frogs BioBedding Tropical Bioactive Substrate</p>
-									<p>$29.99</p>
-								</div>
-							</a>
-						</td>
-						<td class="product">
 							<a href="https://amzn.to/2MIOicr" target="_blank">
 								<img src="images/product37.jpg" alt="s" class="product-img">
 								<div class="product-description">
@@ -489,16 +463,16 @@
 							</div>
 						</a>
 					</td>
-					<td class="product">
-						<a href="https://amzn.to/39Kjqlo" target="_blank">
-							<img src="images/product43.jpg" alt="mushro" class="product-img">
-							<div class="product-description">
-								<br/>
-								<p> Powder Orange Isopods Cleanup Crew</p>
-								<p>$26.99</p>
-							</div>
-						</a>
-					</td>
+						<td class="product">
+							<a href="https://amzn.to/39Kjqlo" target="_blank">
+								<img src="images/product43.jpg" alt="mushro" class="product-img">
+								<div class="product-description">
+									<br/>
+									<p> Powder Orange Isopods Cleanup Crew</p>
+									<p>$26.99</p>
+								</div>
+							</a>
+						</td>
 				</tr>
 				</table>
 			</div>
