--- a/shop-filters/shop-high-low.html
+++ b/shop-filters/shop-high-low.html
@@ -46,7 +46,7 @@
 						<a href="shop.html" class="nav-dropdown-btn">Shop</a>
 						<ul class="nav-dropdown-content">
 							<li><a href="shop.html">All</a></li>
-							<li><a href="terrariums.html">Terrariums</a></li> 
+							<li><a href="terrariums.html">Terrariums</a></li>
 							<li><a href="materials.html">Materials</a></li>
 							<li><a href="plants.html">Plants</a></li>
 							<li><a href="critters.html">Critters</a></li>
@@ -180,49 +180,32 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2PkUnxb" target="_blank">
-								<img src="images/product11.jpg" alt="H potter" class="product-img">
+							<a href="https://amzn.to/36D7dgh" target="_blank">
+								<img src="images/product8.png" alt="Essentials" class="product-img">
 								<div class="product-description">
-									<p>H Potter Terrarium Kit Succulent Soil Supplies for Plants Cactus</p>
-									<p>$16.95</p>
+									<p>Terrarium Essentials Kit </p>
+									<p>$21.99</p>
 								</div>
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2PMI63O" target="_blank">
-								<img src="images/product12.png" alt="5" class="product-img">
+							<a href="https://amzn.to/2rIoe9X" target="_blank">
+								<img src="images/Product3.png" alt="kook" class="product-img">
 								<div class="product-description">
-									<p>Succulent Plants (5 Pack), Fully Rooted in Planter Pots with Soil</p>
-									<p>$17.95</p>
+									<br/>
+									<p>KooK Geometric Glass Terrarium</p>
+									<p>$21.95</p>
 								</div>
 							</a>
 						</td>
 					</tr>
 					<tr>
 						<td class="product">
-							<a href="https://amzn.to/35kPDgQ" target="_blank">
-								<img src="images/product14.jpg" alt="moss" class="product-img">
-								<div class="product-description">
-									<p>Galápagos (05213) Terrarium Sphagnum Moss</p>
-									<p>$5.09 </p>
-								</div>
-							</a>
-						</td>
-						<td class="product">
 							<a href="https://amzn.to/2LTLybA" target="_blank">
 								<img src="images/product15.png" alt="3" class="product-img">
 								<div class="product-description">
 									<p>3 Small Sized B52 Giant Venus Flytraps</p>
 									<p>$21.39</p>
-								</div>
-							</a>
-						</td>
-						<td class="product">
-							<a href="https://amzn.to/36CsUNu" target="_blank">
-								<img src="images/product16.png" alt="soil" class="product-img">
-								<div class="product-description">
-									<p>Organic Carnivorous Plant Soil - 1 Gallon </p>
-									<p>$8.95</p>
 								</div>
 							</a>
 						</td>
@@ -235,23 +218,44 @@
 								</div>
 							</a>
 						</td>
-					</tr>
-					<tr>
 						<td class="product">
-							<a href="https://amzn.to/2RXYLEg" target="_blank">
-								<img src="images/product19.png" alt="rock" class="product-img">
+							<a href="https://amzn.to/2tzzi9R" target="_blank">
+								<img src="images/product26.jpg" alt="spring" class="product-img">
 								<div class="product-description">
-									<p>Natural Slate Stone -1 to 3 inch Rocks</p>
-									<p>$15.95</p>
+									<br/>
+									<p>Premium Live Springtails 16oz Mini Culture</p>
+									<p>$19.99 </p>
 								</div>
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/38EdCcV" target="_blank">
-								<img src="images/product20.png" alt="fig" class="product-img">
+							<a href="https://amzn.to/35vaQ6J" target="_blank">
+								<img src="images/product40.jpg" alt="mus" class="product-img">
 								<div class="product-description">
-									<p>Green Creeping Fig 2 Plants - Ficus - 3" Pot</p>
-									<p>$5.99</p>
+									<br/>
+									<p>Josh's Frogs Temperate Springtail Culture </p>
+									<p>$19.99</p>
+								</div>
+							</a>
+						</td>
+					</tr>
+					<tr>
+						<td class="product">
+							<a href="https://amzn.to/2PjZAW1" target="_blank">
+								<img src="images/product6.png" alt="cute" class="product-img">
+								<div class="product-description">
+									<p>Cute Farms Terrarium Starter Kit</p>
+									<p>$19.95</p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/36cORCN" target="_blank">
+								<img src="images/product33.jpg" alt="corks" class="product-img">
+								<div class="product-description">
+									<br/>
+									<p>Bormioli Rocco Clear Glass Jar</p>
+									<p>$19.90</p>
 								</div>
 							</a>
 						</td>
