fixed navbar on index

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<div class="navbar">
 			<img src="images/text-logo.png" alt="Rainier Terrariums" class="nav-text-logo">
 			<img src="images/logo.png" alt="Rainier Terrariums" class="nav-logo">
-			<nav>
+			<nav class="expand-navbar">
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li class="nav-dropdown">
