--- a/index.html
+++ b/index.html
@@ -40,22 +40,23 @@
 		<div class="navbar">
 			<img src="images/text-logo.png" alt="Rainier Terrariums" class="nav-text-logo">
 			<img src="images/logo.png" alt="Rainier Terrariums" class="nav-logo">
+
 			<nav class="expand-navbar">
 				<ul>
-					<li><a href="index.html">Home</a></li>
+					<a href="index.html"><li>Home</li></a>
 					<li class="nav-dropdown">
 						<a href="shop.html" class="nav-dropdown-btn">Shop</a>
 						<ul class="nav-dropdown-content">
-							<li><a href="shop.html">All</a></li>
-							<li><a href="terrariums.html">Terrariums</a></li> 
-							<li><a href="materials.html">Materials</a></li>
-							<li><a href="plants.html">Plants</a></li>
-							<li><a href="critters.html">Critters</a></li>
+							<a href="shop.html"><li>All</li></a>
+							<a href="terrariums.html"><li>Terrariums</li></a>
+							<a href="materials.html"><li>Materials</li></a>
+							<a href="plants.html"><li>Plants</li></a>
+							<a href="critters.html"><li>Critters</li></a>
 						</ul>
 					</li>
-					<li><a href="PlantCare.html">Plant Care</a></li>
-					<li><a href="CritterCare.html">Critter Care</a></li>
-					<li><a href="contact.html">Contact Us</a></li>
+					<a href="PlantCare.html"><li>Plant Care</li></a>
+					<a href="CritterCare.html"><li>Critter Care</li></a>
+					<a href="contact.html"><li>Contact Us</li></a>
 				</ul>
 			</nav>
 			<nav class="collapse-navbar">
@@ -80,6 +81,9 @@
 			<div class="title-box">
 				<img src="images/text-logo.png" alt="Text Logo" class="text-logo">
 				<h1 class="subtitle">The place to be for plants, terrariums, and little critters</h1>
+			</div>
+			<div class="scroll-indicator">
+				<img src="images/down-arrow.png" alt="Scroll Down" class="down-arrow">
 			</div>
 		</div>
 		<article>
