Created seperate .js file for script

--- a/template.html
+++ b/template.html
@@ -16,23 +16,6 @@
 			gtag('js', new Date());
 			gtag('config', 'UA-154593775-1');
 		</script>
-		<script>
-			function showHideNav() {
-				if (document.getElementById("dropdown").style.display === "none") {
-					document.getElementById("dropdown").style.display = "flex";
-				} else {
-					document.getElementById("dropdown").style.display = "none";
-					document.getElementById("sub-dropdown").style.display = "none";
-				}
-			}
-			function showHideSubNav() {
-				if (document.getElementById("sub-dropdown").style.display === "none") {
-					document.getElementById("sub-dropdown").style.display = "initial";
-				} else {
-					document.getElementById("sub-dropdown").style.display = "none";
-				}
-			}
-		</script>
 	</head>
 	<body>
 		<div class="navbar">
@@ -92,5 +75,6 @@
 				<a href="https://www.facebook.com/rainier.terrariums" target="_blank"><img src="images/footer-facebook-white.png" target="_blank" alt="Facebook" class="footer-social"></a>
 			</div>
 		</footer>
+		<script src="script.js"></script>
 	</body>
 </html>
