--- a/contact.html
+++ b/contact.html
@@ -16,23 +16,6 @@
 			gtag('js', new Date());
 			gtag('config', 'UA-154593775-1');
 		</script>
-		<script>
-			function showHideNav() {
-				if (document.getElementById("dropdown").style.display === "none") {
-					document.getElementById("dropdown").style.display = "flex";
-				} else {
-					document.getElementById("dropdown").style.display = "none";
-					document.getElementById("sub-dropdown").style.display = "none";
-				}
-			}
-			function showHideSubNav() {
-				if (document.getElementById("sub-dropdown").style.display === "none") {
-					document.getElementById("sub-dropdown").style.display = "initial";
-				} else {
-					document.getElementById("sub-dropdown").style.display = "none";
-				}
-			}
-		</script>
 	</head>
 	<body>
 		<div class="navbar">
@@ -96,5 +79,6 @@
 				</div>
 			</footer>
 		</article>
+		<script src="script.js"></script>
 	</body>
 </html>
