--- a/gallery.html
+++ b/gallery.html
@@ -58,17 +58,21 @@
 			<li><a href="plants.html">Plants</a></li>
 			<li><a href="critters.html">Critters</a></li>
 		</ul>
+		<div class="gallery-focus" id="gallery-focus">
+
+		</div>
 		<article>
-            <div class="content">
+            <div class="content" style="margin-top: 125px">
 				<table>
 					<tr>
-						<td class="product">
-							<img src="images/product4.jpg" alt="venus" class="product-img">
-						</td>
+						<td><img src="images/product2.jpg" class="gallery-img" id="gallery-img1" onclick="focusImg1()"></td>
+						<td><img src="images/product2.jpg" class="gallery-img"></td>
+						<td><img src="images/product2.jpg" class="gallery-img"></td>
+						<td><img src="images/product2.jpg" class="gallery-img"></td>
 					</tr>
 				</table>
-            </div>
-        </article>
+			</div>
+		</article>
 		<footer>
 			<img src="images/logo.png" alt="Rainier Terrariums" class="footer-logo">
 			<h3 style="margin: 0; padding-top: 40px;">&copy; 2019 Kelson Milewski & Ryan Schlosser</h3>
