Update, i have no idea what im doing

--- a/gallery.html
+++ b/gallery.html
@@ -58,9 +58,7 @@
 			<li><a href="plants.html">Plants</a></li>
 			<li><a href="critters.html">Critters</a></li>
 		</ul>
-		<div class="gallery-focus" id="gallery-focus">
-
-		</div>
+		<div class="gallery-focus" id="gallery-focus"></div>
 		<article>
             <div class="content" style="margin-top: 125px">
 				<table>
