Updated product page

--- a/product1.html
+++ b/product1.html
@@ -65,9 +65,8 @@
 				<div class="product-pg-description">
 					<h2>Mkono 4 Inch Mini Glass Geometric Terrarium Container Set of 3 Modern Tabletop Planter Windowsill Decor Shelves DIY Display Box Centerpiece Gift for Succulent Air Plant Miniature Fairy Garden, Gold</h2>
 					<h2 style="float: left">$23.99</h2>
-					<a href="#" class="buy-btn">
-						<p>Buy on Amazon</p>
-					</a>
+					<a href="https://amzn.to/2LREg86" target="_blank" class="buy-btn"><p>Buy on Amazon</p></a>
+					<br/><br/><br/>
 					<ul>
 						<li>Simple and elegant appearance designs in 3 different shapes of Globe, Triangle Teardrop and Bowl adds modern and stylish sense to your living surroundings or work space. Beautiful artistic polyhedron terrarium for holding plants like succulent, fern, moss, cacti, tillandsias, air plants, DIY mini fairy garden, artificial plants with easy maintainence or other decorative objects.</li>
 						<li>Great geometrical design complements today's modern decor, adding dainty and chic accent to a room especially when serving as contemporary centerpiece on a coffee table, cabinet, desktop, floating shelves, and windowsills. Perfect display box for weddings, holidays, parties, offices, living home, bedroom, kitchen, Hotel, and home decor.</li>
