--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 		-->
 		<footer>
 			<img src="images/logo.png" alt="Rainier Terrariums" class="footer-logo">
-			<h3 style="margin: 0; padding-top: 40px;">&copy; 2019 Kelson Milewski & Ryan Schlosser</h3>
+			<h3 style="margin: 0; padding-top: 40px;">&copy; 2019 Kelson Milewski</h3>
 			<div class="footer-social-section">
 				<a href="https://discord.gg/eybXTrr" target="_blank"><img src="images/discord-logo.png" alt="Discord" class="footer-social"></a>
 				<a href="https://www.instagram.com/rainier_terrariums/" target="_blank"><img src="images/instagram-logo.png" target="_blank" alt="Instagram" class="footer-social"></a>
