Scroll indicator update

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 				<h1 class="subtitle">The place to be for plants, terrariums, and little critters</h1>
 			</div>
 			<div class="scroll-indicator">
-				<img src="images/down-arrow.png" alt="Scroll Down" class="down-arrow">
+				<a href="#article"><img src="images/down-arrow.png" alt="Scroll Down" class="down-arrow"></a>
 			</div>
 		</div>
-		<article>
+		<article id="article">
 			<div class="content">
 				<h1 style="text-align: center">Featured Products</h1>
 				<table>
