--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
 		</ul>
 		<article style="height: 100vh;">
 			<div class="content" style="margin-top: 150px;">
-				<form name="Feedback" method="post" action="mailto:rainierterrariumsbusiness@gmail.com" enctype="text/plain">
+				<form name="Feedback" method="post" action="mailto:rainierterrariums.info@gmail.com" enctype="text/plain">
 					<h2>Email Us</h2>
 					<p>Feel free to send us any questions you may have, feedback, or suggestions. Your opinion is greatly appreciated and will help us provide a better experience for our users.</p>
 					<textarea name="comment" cols="60" rows="5" placeholder="Type here..."></textarea>
