--- a/contact.html
+++ b/contact.html
@@ -68,9 +68,11 @@
 					<input type="submit" value="Send" class="send-btn"/>
 				</form>
 			</div>
-			<footer style="position: absolute; bottom: 0; width: 100%;">
-				<img src="images/logo.png" alt="Rainier Terrariums" class="footer-logo">
-				<h3 style="margin: 0; padding-top: 40px;">&copy; 2019 Kelson Milewski</h3>
+			<footer>
+				<div class="copyright">
+					<img src="images/logo.png" alt="Rainier Terrariums" class="footer-logo">
+					<h3>Copyright &copy; 2020 Kelson Milewski</h3>
+				</div>
 				<div class="footer-social-section">
 					<a href="https://discord.gg/eybXTrr" target="_blank"><img src="images/discord-logo.png" alt="Discord" class="footer-social"></a>
 					<a href="https://www.instagram.com/rainier_terrariums/" target="_blank"><img src="images/instagram-logo.png" target="_blank" alt="Instagram" class="footer-social"></a>
