--- a/contact.html
+++ b/contact.html
@@ -68,19 +68,19 @@
 					<input type="submit" value="Send" class="send-btn"/>
 				</form>
 			</div>
-			<footer>
-				<div class="copyright">
-					<img src="images/logo.png" alt="Rainier Terrariums" class="footer-logo">
-					<h3>Copyright &copy; 2020 Kelson Milewski</h3>
-				</div>
-				<div class="footer-social-section">
-					<a href="https://discord.gg/eybXTrr" target="_blank"><img src="images/discord-logo.png" alt="Discord" class="footer-social"></a>
-					<a href="https://www.instagram.com/rainier_terrariums/" target="_blank"><img src="images/instagram-logo.png" target="_blank" alt="Instagram" class="footer-social"></a>
-					<a href="https://twitter.com/rterrariums" target="_blank"><img src="images/twitter-logo.png" target="_blank" alt="Twitter" class="footer-social"></a>
-					<a href="https://www.facebook.com/rainier.terrariums" target="_blank"><img src="images/facebook-logo.png" target="_blank" alt="Facebook" class="footer-social"></a>
-				</div>
-			</footer>
 		</article>
+		<footer style="width: 100%; position: absolute; bottom: 0;">
+			<div class="copyright">
+				<img src="images/logo.png" alt="Rainier Terrariums" class="footer-logo">
+				<h3>Copyright &copy; 2020 Kelson Milewski</h3>
+			</div>
+			<div class="footer-social-section">
+				<a href="https://discord.gg/eybXTrr" target="_blank"><img src="images/discord-logo.png" alt="Discord" class="footer-social"></a>
+				<a href="https://www.instagram.com/rainier_terrariums/" target="_blank"><img src="images/instagram-logo.png" target="_blank" alt="Instagram" class="footer-social"></a>
+				<a href="https://twitter.com/rterrariums" target="_blank"><img src="images/twitter-logo.png" target="_blank" alt="Twitter" class="footer-social"></a>
+				<a href="https://www.facebook.com/rainier.terrariums" target="_blank"><img src="images/facebook-logo.png" target="_blank" alt="Facebook" class="footer-social"></a>
+			</div>
+		</footer>
 		<script src="script.js"></script>
 	</body>
 </html>
