--- a/template.html
+++ b/template.html
@@ -37,7 +37,6 @@
 					</li>
 					<a href="PlantCare.html"><li>Plant Care</li></a>
 					<a href="CritterCare.html"><li>Critter Care</li></a>
-					<a href="contact.html"><li>Contact Us</li></a>
 				</ul>
 			</nav>
 			<nav class="collapse-navbar">
@@ -49,7 +48,6 @@
 			<li onclick="showHideSubNav()" style="cursor: pointer"><a>Shop</a></li>
 			<li style="text-align: center;"><a href="PlantCare.html">Plant<br/>Care</a></li>
 			<li style="text-align: center;"><a href="CritterCare.html">Critter<br/>Care</a></li>
-	  		<li style="text-align: center;"><a href="contact.html">Contact<br/>Us</a></li>
 		</ul>
 		<ul class="sub-dropdown" id="sub-dropdown">
 			<li><a href="shop.html">All</a></li>
@@ -75,6 +73,9 @@
 				<a href="https://www.instagram.com/rainier_terrariums/" target="_blank"><img src="images/instagram-logo.png" target="_blank" alt="Instagram" class="footer-social"></a>
 				<a href="https://twitter.com/rterrariums" target="_blank"><img src="images/twitter-logo.png" target="_blank" alt="Twitter" class="footer-social"></a>
 				<a href="https://www.facebook.com/rainier.terrariums" target="_blank"><img src="images/facebook-logo.png" target="_blank" alt="Facebook" class="footer-social"></a>
+			</div>
+			<div class="footer-links">
+				<a href="contact.html">Contact Us</a>
 			</div>
 		</footer>
 		<script src="script.js"></script>
