Added gecko care

--- a/GeckoCare.html
+++ b/GeckoCare.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Rainier Terrariums</title>
+		<title>Gecko Care - Rainier Terrariums</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="styles.css">
@@ -60,13 +60,68 @@
 		</ul>
 		<article>
             <div class="content">
-				<table>
-					<tr>
-						<td class="product">
-							<img src="images/product4.jpg" alt="venus" class="product-img">
-						</td>
-					</tr>
-				</table>
+				<br/><br/>
+				<h1><i>Crested Geckos</i></h1>
+
+				<h2><u><b> Housing </b></u></h2>
+				<p>You should use a minimum of a 20GL tall tank is satisfactory for an adult crested gecko a more spacious tank is more desirable.
+					 Crested geckos are arboreal and require a lot of vertical space for climbing a taller tank is the best.
+					  If you have multiple crested geckos only keep one male per tank.
+						Implement a mix of branches, driftwood, vines, and cork bark throughout the tank.
+						 Add lots of foliage (live or plastic) they will use the plants for hiding.
+						 A water dish is not needed as they will drink droplets of water from the tank.</p>
+
+	 			<h2><u><b> Substrate </b></u></h2>
+	 			<p>Crested geckos spend a majority of their time above the ground so you can use a variety of substrates.
+					 Use a substrate that holds moisture such as coco fiber or moss.
+					 Paper towels are recommended for juveniles as they are more prone to swallow other substrates while hunting.</p>
+
+ 				<h2><u><b> Temperature   </b></u></h2>
+ 				<p>Temperature for a crested gecko should be kept within 70 and 78 degrees.
+					 If the temperature is 82 degrees or higher your crested gecko will become
+					 stressed, which could lead to sickness or is some instances death. </p>
+
+		 		<h2><u><b> Humidity </b></u></h2>
+		 		<p>Crested geckos require a medium to high humidity level
+					 preferably 60 to 80 percent humidity use a hygrometer to guarantee you have the correct humidity.
+					 Mist the tank with water to maintain humidity depending on your tank you may need to mist it a few times a day to retain humidity.
+					Assure sure the cage is well misted in the evening as crested geckos are most active at night. </p>
+
+					<h2><u><b>Food</b></u></h2>
+			 		<p>Crested Geckos feed on both fruit and insects in nature.
+						 Repashy, as well as Pangea fruit mixes, are most preferred among crested gecko owners.
+						 They can also be fed crickets or Dubai roaches as a portion of their diet.
+						  If you feed insects they should be dusted with a vitamin and mineral powder.</p>
+
+
+				<br/>
+				<h1><i>Leopard Geckos</i></h1>
+
+				<h2><u><b> Housing </b></u></h2>
+				<p>A 15 to 20GL tank should be a good size for a leopard gecko.
+					 Make sure to provide a hiding place both dry and damp.
+					  A fish tank could work aswell for leopard geckos.
+						A normal white light incandescent heat bulb could be used to provide a basking spot.</p>
+
+				<h2><u><b> Substrate </b></u></h2>
+				<p>For smaller leopard geckos, enclosure carpet or paper towels will work well.
+					For older geckos, you could use enclosure carpet, paper towels, or fine reptile
+					sand that can be used to provide the leopard gecko with a more natural setting.  </p>
+
+				<h2><u><b> Temperature   </b></u></h2>
+				<p> Temperature for a leopard gecko basking spot should 88 to 75 degrees.
+					At night the temperature should be around  70 to 75 degrees.
+					 Leopard geckos do not need very humid environments,
+					  but if the humidity is under 20% you may notice that your gecko has difficulty shedding.</p>
+
+					<h2><u><b>Food</b></u></h2>
+					<p>
+A shallow dish of water should be given at all times for your leopard gecko.
+ You should feed a variety of crickets, waxworms, mealworms.
+Insects need to be gut loaded for at least 24 hours before feeding and then covered with a calcium supplement at each feeding.
+Younger geckos should be fed a few crickets every day, older geckos can skip several days between meals.</p>
+
+
             </div>
         </article>
 		<footer>
