--- a/PlantCare.html
+++ b/PlantCare.html
@@ -37,6 +37,7 @@
 					</li>
 					<a href="PlantCare.html"><li>Plant Care</li></a>
 					<a href="CritterCare.html"><li>Critter Care</li></a>
+							<a href="GeckoCare.html"><li>Gecko Care</li></a>
 				</ul>
 			</nav>
 			<nav class="collapse-navbar">
@@ -48,6 +49,7 @@
 			<li onclick="showHideSubNav()" style="cursor: pointer"><a>Shop</a></li>
 			<li style="text-align: center;"><a href="PlantCare.html">Plant<br/>Care</a></li>
 			<li style="text-align: center;"><a href="CritterCare.html">Critter<br/>Care</a></li>
+				<li style="text-align: center;"><a href="GeckoCare.html">Gecko<br/>Care</a></li>
 		</ul>
 		<ul class="sub-dropdown" id="sub-dropdown">
 			<li><a href="shop.html">All</a></li>
@@ -72,7 +74,7 @@
 
 		 		<h2><u><b> Humidity </b></u></h2>
 		 		<p>Most carnivorous plants need high humidity. An indoor terrarium or an outdoor garden in humid areas will satisfy this need.</p>
-				
+
 				<br/>
 				<h1><i>Forest Terrariums</i></h1>
 
@@ -83,7 +85,7 @@
 
 			 	<h2><u><b> Light </b></u></h2>
 			 	<p>Certain plants need bright, but indirect light. Never place in direct sunlight or outdoors.</p>
-				
+
 				<br/>
 				<h1><i>Succulent Terrariums</i></h1>
 
