--- a/CritterCare.html
+++ b/CritterCare.html
@@ -37,6 +37,7 @@
 					</li>
 					<a href="PlantCare.html"><li>Plant Care</li></a>
 					<a href="CritterCare.html"><li>Critter Care</li></a>
+						<a href="GeckoCare.html"><li>Gecko Care</li></a>
 				</ul>
 			</nav>
 			<nav class="collapse-navbar">
@@ -48,6 +49,7 @@
 			<li onclick="showHideSubNav()" style="cursor: pointer"><a>Shop</a></li>
 			<li style="text-align: center;"><a href="PlantCare.html">Plant<br/>Care</a></li>
 			<li style="text-align: center;"><a href="CritterCare.html">Critter<br/>Care</a></li>
+				<li style="text-align: center;"><a href="GeckoCare.html">Gecko<br/>Care</a></li>
 		</ul>
 		<ul class="sub-dropdown" id="sub-dropdown">
 			<li><a href="shop.html">All</a></li>
@@ -84,7 +86,7 @@
 
 				<h2><u><b>Basic Information</b></u></h2>
 				<p> Provide the culture a week or two to develop before pulling from it. Do not transfer your whole culture into your setup if you plan on reproducing them. If you want to get started with a bioactive setup we offer clean up crews in our shop.</p>
-				
+
 				<br/><br/>
 				<table>
 					<tr>
