--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 					</li>
 					<a href="PlantCare.html"><li>Plant Care</li></a>
 					<a href="CritterCare.html"><li>Critter Care</li></a>
+							<a href="GeckoCare.html"><li>Gecko Care</li></a>
 				</ul>
 			</nav>
 			<nav class="collapse-navbar">
@@ -50,6 +51,7 @@
 			<li onclick="showHideSubNav()" style="cursor: pointer"><a>Shop</a></li>
 			<li style="text-align: center;"><a href="PlantCare.html">Plant<br/>Care</a></li>
 			<li style="text-align: center;"><a href="CritterCare.html">Critter<br/>Care</a></li>
+				<li style="text-align: center;"><a href="GeckoCare.html">Gecko<br/>Care</a></li>
 		</ul>
 		<ul class="sub-dropdown" id="sub-dropdown">
 			<li><a href="shop.html">All</a></li>
