added new products

--- a/materials.html
+++ b/materials.html
@@ -167,6 +167,16 @@
 								</div>
 							</a>
 						</td>
+						<td class="product">
+							<a href="https://www.amazon.com/Zilla-Reptile-D%C3%A9cor-Malaysian-Driftwood/dp/B001F9CUY4/ref=sr_1_97?crid=1CE2YEPM0K72X&keywords=crested+gecko+decor&qid=1582339350&sprefix=crested+gecko+%2Caps%2C240&sr=8-97" target="_blank">
+								<img src="images/product60.jpg" alt="wat" class="product-img">
+								<div class="product-description">
+									<br/>
+									<p> Zilla Reptile Décor Malaysian Driftwood</p>
+									<p>$8.14 </p>
+								</div>
+							</a>
+						</td>
 					</tr>
 				</table>
             </div>
