--- a/shop.html
+++ b/shop.html
@@ -482,7 +482,195 @@
 							</div>
 						</a>
 					</td>
+					<td class="product">
+						<a href="https://www.amazon.com/Pangea-Ultimate-Gecko-Ledge-Magnetic/dp/B00B5I7CO8?ref_=ast_sto_dp" target="_blank">
+							<img src="images/product44.jpg" alt="ge" class="product-img">
+							<div class="product-description">
+								<br/>
+								<p> Pangea Ultimate Gecko Ledge</p>
+								<p>$19.99</p>
+							</div>
+						</a>
+					</td>
+					<td class="product">
+						<a href="https://www.amazon.com/gp/slredirect/picassoRedirect.html/ref=sspa_dk_detail_0?ie=UTF8&adId=A05142661I19GB27EQBET&qualifier=1582336359&id=3176173455974641&widgetName=sp_detail2&url=%2Fdp%2FB07NXDWJGL%2Fref%3Dsspa_dk_detail_0%3Fpsc%3D1" target="_blank">
+							<img src="images/product45.jpg" alt="gec" class="product-img">
+							<div class="product-description">
+								<br/>
+								<p> SLSON Gecko Feeder Ledge Acrylic</p>
+								<p>$8.99 </p>
+							</div>
+						</a>
+					</td>
 				</tr>
+				<tr>
+				<td class="product">
+					<a href="https://www.amazon.com/Pangea-Fruit-Insects-Crested-Complete/dp/B00C9JBTI2/ref=sr_1_9?keywords=crested+gecko&qid=1582336098&sr=8-9" target="_blank">
+						<img src="images/product46.jpg" alt="geck" class="product-img">
+						<div class="product-description">
+							<br/>
+							<p> Pangea Fruit Mix with Insects </p>
+							<p>$17.99</p>
+						</div>
+					</a>
+				</td>
+				<td class="product">
+					<a href="https://www.amazon.com/Repashy-Crested-Gecko-MRP-Diet/dp/B00BY9R5UY/ref=sr_1_2?m=A1UVN0LGSMO4HK&marketplaceID=ATVPDKIKX0DER&qid=1582337005&s=merchant-items&sr=1-2" target="_blank">
+						<img src="images/product47.jpg" alt="geckof" class="product-img">
+						<div class="product-description">
+							<br/>
+							<p> Repashy Crested Gecko MRP Diet</p>
+							<p>$13.98</p>
+						</div>
+					</a>
+				</td>
+				<td class="product">
+					<a href="https://www.amazon.com/SunGrow-5-1-inches-Diameter-2-4-inches-Opening/dp/B07QS7STZC/ref=sr_1_7?keywords=crested%2Bgecko&qid=1582336125&sr=8-7&th=1" target="_blank">
+						<img src="images/product48.jpg" alt="geckofo" class="product-img">
+						<div class="product-description">
+							<br/>
+							<p> SunGrow Gecko Coco Hut, Raw Coconut Husk</p>
+							<p>$16.95</p>
+						</div>
+					</a>
+				</td>
+				<td class="product">
+					<a href="https://www.amazon.com/Exo-Terra-Jungle-Vine-Small/dp/B003PB4VSS/ref=sr_1_11?keywords=crested+gecko&qid=1582336125&sr=8-11" target="_blank">
+						<img src="images/product49.jpg" alt="geckofoo" class="product-img">
+						<div class="product-description">
+							<br/>
+							<p> Exo Terra Jungle Vine</p>
+							<p>$2.97</p>
+						</div>
+					</a>
+				</td>
+			</tr>
+			<tr>
+			<td class="product">
+				<a href="https://www.amazon.com/Flukers-Bamboo-Bars-Reptile-enclosures/dp/B00164K3NI/ref=sr_1_15?keywords=crested+gecko&qid=1582336125&sr=8-15" target="_blank">
+					<img src="images/product50.jpg" alt="geckfood" class="product-img">
+					<div class="product-description">
+						<br/>
+						<p> Fluker's Bamboo Bars for Reptile enclosures </p>
+						<p> $4.33 </p>
+					</div>
+				</a>
+			</td>
+			<td class="product">
+				<a href="https://www.amazon.com/dp/B00KSJP7A6/ref=psdc_2975518011_t3_B00164K3NI" target="_blank">
+					<img src="images/product51.jpg" alt="hi" class="product-img">
+					<div class="product-description">
+						<br/>
+						<p>Exo Terra Hiding Cave </p>
+						<p> $21.34 </p>
+					</div>
+				</a>
+			</td>
+			<td class="product">
+				<a href="https://www.amazon.com/dp/B0002AR5DI/ref=psdc_2975512011_t1_B003PB4VSS" target="_blank">
+					<img src="images/product52.jpg" alt="hid" class="product-img">
+					<div class="product-description">
+						<br/>
+						<p>Exo Terra Plastic Terrarium Plant, Large, Mandarin</p>
+						<p> $3.67 </p>
+					</div>
+				</a>
+			</td>
+			<td class="product">
+				<a href="https://www.amazon.com/dp/B0032GG7M4/ref=psdc_2975512011_t3_B0002AR5DI" target="_blank">
+					<img src="images/product53.jpg" alt="hide" class="product-img">
+					<div class="product-description">
+						<br/>
+						<p>Exo Terra Forest Branch</p>
+						<p>$6.86 </p>
+					</div>
+				</a>
+			</td>
+		</tr>
+		<tr>
+		<td class="product">
+			<a href="https://www.amazon.com/dp/B000OAYXTK/ref=psdc_2975518011_t2_B00KSJP7A6" target="_blank">
+				<img src="images/product54.jpg" alt="hideg" class="product-img">
+				<div class="product-description">
+					<br/>
+					<p> Exo Terra AllGlass Terrarium - 18 x 18 x 24  </p>
+					<p> $169.65 </p>
+				</div>
+			</a>
+		</td>
+		<td class="product">
+			<a href="https://www.amazon.com/dp/B001B5DIMK/ref=psdc_2975518011_t3_B00KSJP7A6" target="_blank">
+				<img src="images/product55.jpg" alt="hidege" class="product-img">
+				<div class="product-description">
+					<br/>
+					<p> Exo Terra Rainforest Habitat Kit  </p>
+					<p>$134.05</p>
+				</div>
+			</a>
+		</td>
+		<td class="product">
+			<a href="https://www.amazon.com/Zilla-Spring-Cave-Reptile-Decor/dp/B07JWJTD1Y/ref=sr_1_81?crid=1NX8DD6NXL6CY&keywords=crested+gecko&qid=1582338378&sprefix=crested+%2Cpets%2C219&sr=8-81" target="_blank">
+				<img src="images/product56.jpg" alt="hidegec" class="product-img">
+				<div class="product-description">
+					<br/>
+					<p> Zilla Spring Cave Reptile Decor  </p>
+					<p>$49.64</p>
+				</div>
+			</a>
+		</td>
+		<td class="product">
+			<a href="https://www.amazon.com/Prevue-Hendryx-62806-Naturals-Ladder/dp/B007PO39I4/ref=sxin_1_ac_d_pm?ac_md=1-0-VW5kZXIgJDU%3D-ac_d_pm&crid=1CE2YEPM0K72X&cv_ct_cx=crested+gecko+decor&keywords=crested+gecko+decor&pd_rd_i=B007PO39I4&pd_rd_r=be41ee80-6695-42e9-93d7-a1779c09ce7a&pd_rd_w=XVBRu&pd_rd_wg=aK6H8&pf_rd_p=516e6e17-ed95-417b-b7a4-ad2c7b9cbae3&pf_rd_r=T9GWYYVWTVA4BB6HKKSY&psc=1&qid=1582338710&sprefix=crested+gecko+%2Caps%2C240" target="_blank">
+				<img src="images/product57.jpg" alt="hidegeck" class="product-img">
+				<div class="product-description">
+					<br/>
+					<p> Prevue Hendryx 62806 Naturals Rope </p>
+					<p>$3.90 </p>
+				</div>
+			</a>
+		</td>
+	</tr>
+</tr>
+	<td class="product">
+		<a href="https://www.amazon.com/Exo-Terra-Boston-Terrarium-Medium/dp/B001B57KZ6/ref=pd_sim_199_19?_encoding=UTF8&pd_rd_i=B001B57KZ6&pd_rd_r=f98e0ae0-dc0b-4f61-8e0d-d17791fa468c&pd_rd_w=z6wPa&pd_rd_wg=VxPph&pf_rd_p=65e3eab0-d81f-4a76-93ff-f0b7b1d6cd3d&pf_rd_r=BFTC213XJ246T1TDVW5G&psc=1&refRID=BFTC213XJ246T1TDVW5G" target="_blank">
+			<img src="images/product58.jpg" alt="hidegecko" class="product-img">
+			<div class="product-description">
+				<br/>
+				<p> Exo Terra Terrarium Plant</p>
+				<p>$15.70</p>
+			</div>
+		</a>
+	</td>
+	<td class="product">
+		<a href="https://www.amazon.com/dp/B0009YEB70/ref=psdc_2975512011_t1_B001B57KZ6" target="_blank">
+			<img src="images/product59.jpg" alt="wa" class="product-img">
+			<div class="product-description">
+				<br/>
+				<p> Fluker's Pothos Repta Vines for Reptiles</p>
+				<p>$6.03 </p>
+			</div>
+		</a>
+	</td>
+	<td class="product">
+		<a href="https://www.amazon.com/Zilla-Reptile-D%C3%A9cor-Malaysian-Driftwood/dp/B001F9CUY4/ref=sr_1_97?crid=1CE2YEPM0K72X&keywords=crested+gecko+decor&qid=1582339350&sprefix=crested+gecko+%2Caps%2C240&sr=8-97" target="_blank">
+			<img src="images/product60.jpg" alt="wat" class="product-img">
+			<div class="product-description">
+				<br/>
+				<p> Zilla Reptile Décor Malaysian Driftwood</p>
+				<p>$8.14 </p>
+			</div>
+		</a>
+	</td>
+	<td class="product">
+		<a href="https://www.amazon.com/Zoo-Med-Economy-Thermometer-Humidity/dp/B004PBB1JE/ref=sr_1_134?crid=1CE2YEPM0K72X&keywords=crested+gecko+decor&qid=1582339719&sprefix=crested+gecko+%2Caps%2C240&sr=8-134" target="_blank">
+			<img src="images/product61.jpg" alt="wate" class="product-img">
+			<div class="product-description">
+				<br/>
+				<p> Analog Dual Thermometer and Humidity Gauge</p>
+				<p>$7.12 </p>
+			</div>
+		</a>
+	</td>
+</tr>
 				</table>
 			</div>
 		</article>
