Fixed lowercase issue

--- a/terrariums.html
+++ b/terrariums.html
@@ -131,7 +131,7 @@
 						</td>
 						<td class="product">
 							<a href="https://www.amazon.com/dp/B000OAYXTK/ref=psdc_2975518011_t2_B00KSJP7A6" target="_blank">
-								<img src="images/product54.jpg" alt="hideg" class="product-img">
+								<img src="images/Product54.jpg" alt="hideg" class="product-img">
 								<div class="product-description">
 									<br/>
 									<p> Exo Terra AllGlass Terrarium - 18 x 18 x 24  </p>
