--- a/critters.html
+++ b/critters.html
@@ -61,7 +61,7 @@
 				<table>
 					<tr>
 						<td class="product">
-							<a href="https://amzn.to/2Ep4ACw" target="_blank">
+							<a href="https://amzn.to/32kKIvu" target="_blank">
 								<img src="images/product18.png" alt="iso" class="product-img">
 								<div class="product-description">
 									<p>Critters Direct Live Springtails + Isopods, Combo Package </p>
@@ -70,7 +70,7 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2tzzi9R" target="_blank">
+							<a href="https://amzn.to/2wBpeyB" target="_blank">
 								<img src="images/product26.jpg" alt="spring" class="product-img">
 								<div class="product-description">
 									<br/>
@@ -80,7 +80,7 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2EFSTri" target="_blank">
+							<a href="https://amzn.to/37Tfay2" target="_blank">
 								<img src="images/product27.png" alt="iso" class="product-img">
 								<div class="product-description">
 									<br/>
@@ -90,7 +90,7 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/35vaQ6J" target="_blank">
+							<a href="https://amzn.to/2HLjJ2V" target="_blank">
 								<img src="images/product40.jpg" alt="mus" class="product-img">
 								<div class="product-description">
 									<br/>
@@ -102,7 +102,7 @@
 					</tr>
 					<tr>
 					<td class="product">
-						<a href="https://amzn.to/37FBPOM" target="_blank">
+						<a href="https://amzn.to/2wzfyoi" target="_blank">
 							<img src="images/product42.jpg" alt="mushr" class="product-img">
 							<div class="product-description">
 								<br/>
@@ -112,7 +112,7 @@
 						</a>
 					</td>
 					<td class="product">
-						<a href="https://amzn.to/39Kjqlo" target="_blank">
+						<a href="https://amzn.to/2vV9c2v" target="_blank">
 							<img src="images/product43.jpg" alt="mushro" class="product-img">
 							<div class="product-description">
 								<br/>
