--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				<table>
 					<tr>
 						<td class="product">
-							<a href="https://amzn.to/2rIoe9X" target="_blank">
+							<a href="https://amzn.to/2HQQQlW" target="_blank">
 								<img src="images/Product3.png" alt="kook" class="product-img">
 								<div class="product-description">
 									<br/>
@@ -83,7 +83,7 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2PiIRm8" target="_blank">
+							<a href="https://amzn.to/32jcngm" target="_blank">
 								<img src="images/product9.png" alt="mini" class="product-img">
 								<div class="product-description">
 									<p>Mini Ferns for Terrariums/Fairy Garden </p>
@@ -92,7 +92,7 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2PMI63O" target="_blank">
+							<a href="https://amzn.to/39SjsHg" target="_blank">
 								<img src="images/product12.png" alt="5" class="product-img">
 								<div class="product-description">
 									<p>Succulent Plants (5 Pack), Fully Rooted in Planter Pots with Soil</p>
@@ -101,7 +101,7 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2SmWnHr" target="_blank">
+							<a href="https://amzn.to/38UEJ39" target="_blank">
 								<img src="images/product24.jpg" alt="led" class="product-img">
 								<div class="product-description">
 									<p>LED Grow Light Strips for Plants,Cholas 36W 132 LEDs</p>
