--- a/materials.html
+++ b/materials.html
@@ -61,7 +61,7 @@
 				<table>
 					<tr>
 						<td class="product">
-							<a href="https://amzn.to/2PjZAW1" target="_blank">
+							<a href="https://amzn.to/2vUiA6l" target="_blank">
 								<img src="images/product6.png" alt="cute" class="product-img">
 								<div class="product-description">
 									<p>Cute Farms Terrarium Starter Kit</p>
@@ -70,7 +70,7 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/36D7dgh" target="_blank">
+							<a href="https://amzn.to/2T7EQlc" target="_blank">
 								<img src="images/product8.png" alt="Essentials" class="product-img">
 								<div class="product-description">
 									<p>Terrarium Essentials Kit </p>
@@ -79,7 +79,7 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2PkUnxb" target="_blank">
+							<a href="https://amzn.to/2HRqEro" target="_blank">
 								<img src="images/product11.jpg" alt="H potter" class="product-img">
 								<div class="product-description">
 									<p>H Potter Terrarium Kit Succulent Soil Supplies for Plants Cactus</p>
@@ -88,7 +88,7 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/35kPDgQ" target="_blank">
+							<a href="https://amzn.to/2PfM7xZ" target="_blank">
 								<img src="images/product14.jpg" alt="moss" class="product-img">
 								<div class="product-description">
 									<p>Galápagos (05213) Terrarium Sphagnum Moss</p>
@@ -99,7 +99,7 @@
 					</tr>
 					<tr>
 						<td class="product">
-							<a href="https://amzn.to/36CsUNu" target="_blank">
+							<a href="https://amzn.to/37WJYhb" target="_blank">
 								<img src="images/product16.png" alt="soil" class="product-img">
 								<div class="product-description">
 									<p>Organic Carnivorous Plant Soil - 1 Gallon </p>
@@ -108,7 +108,7 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2RXYLEg" target="_blank">
+							<a href="https://amzn.to/2w1QDd2" target="_blank">
 								<img src="images/product19.png" alt="rock" class="product-img">
 								<div class="product-description">
 									<p>Natural Slate Stone -1 to 3 inch Rocks</p>
@@ -117,7 +117,7 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2YYpBxm" target="_blank">
+							<a href="https://amzn.to/32kJsIM" target="_blank">
 								<img src="images/product21.jpg" alt="Coco" class="product-img">
 								<div class="product-description">
 									<p>Zoo Med Eco Earth (Single Brick)</p>
@@ -126,7 +126,7 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2YV7Lvi" target="_blank">
+							<a href="https://amzn.to/2HPUcW8" target="_blank">
 								<img src="images/product22.png" alt="char" class="product-img">
 								<div class="product-description">
 									<p>Horticultural Charcoal, 100% All Natural Hardwood</p>
@@ -137,7 +137,7 @@
 					</tr>
 					<tr>
 						<td class="product">
-							<a href="https://amzn.to/35waEFr" target="_blank">
+							<a href="https://amzn.to/3c4wseI" target="_blank">
 								<img src="images/product23.png" alt="co" class="product-img">
 								<div class="product-description">
 									<p>Exo Terra Coco Husk Terrarium Substrate</p>
@@ -146,7 +146,7 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2EKMhrL" target="_blank">
+							<a href="https://amzn.to/2SQ5yzR" target="_blank">
 								<img src="images/product28.jpg" alt="sub" class="product-img">
 								<div class="product-description">
 									<br/>
@@ -156,7 +156,7 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2SVg0GF" target="_blank">
+							<a href="https://amzn.to/32mUzAQ" target="_blank">
 								<img src="images/product41.jpg" alt="mush" class="product-img">
 								<div class="product-description">
 									<br/>
@@ -166,7 +166,7 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://www.amazon.com/Zilla-Reptile-D%C3%A9cor-Malaysian-Driftwood/dp/B001F9CUY4/ref=sr_1_97?crid=1CE2YEPM0K72X&keywords=crested+gecko+decor&qid=1582339350&sprefix=crested+gecko+%2Caps%2C240&sr=8-97" target="_blank">
+							<a href="https://amzn.to/32pim3s" target="_blank">
 								<img src="images/Product60.jpg" alt="wat" class="product-img">
 								<div class="product-description">
 									<br/>
