--- a/terrariums.html
+++ b/terrariums.html
@@ -61,7 +61,7 @@
 				<table>
 					<tr>
 						<td class="product">
-							<a href="https://amzn.to/2LREg86" target="_blank">
+							<a href="https://amzn.to/2VmSNhE" target="_blank">
 								<img src="images/product2.jpg" alt="Mkono" class="product-img">
 								<div class="product-description">
 									<br/>
@@ -71,7 +71,7 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/34mfweK" target="_blank">
+							<a href="https://amzn.to/2PhajAn" target="_blank">
 								<img src="images/Product1.jpg" alt="kids" class="product-img">
 								<div class="product-description">
 									<p>Light-up Terrarium Kit for Kids</p>
@@ -80,7 +80,7 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2rIoe9X" target="_blank">
+							<a href="https://amzn.to/3bYhVRU" target="_blank">
 								<img src="images/Product3.png" alt="kook" class="product-img">
 								<div class="product-description">
 									<br/>
@@ -89,7 +89,7 @@
 								</div>
 							</a>
 						</td><td class="product">
-							<a href="https://amzn.to/2rzSaVT" target="_blank">
+							<a href="https://amzn.to/3bW8Glj" target="_blank">
 								<img src="images/Product5.png" alt="exo" class="product-img">
 								<div class="product-description">
 									<br/>
@@ -101,7 +101,7 @@
 					</tr>
 					<tr>
 						<td class="product">
-							<a href="https://amzn.to/34mNb82" target="_blank">
+							<a href="https://amzn.to/2umQEYj" target="_blank">
 								<img src="images/product7.png" alt="mkono2" class="product-img">
 								<div class="product-description">
 									<p>Mkono Plant Terrarium Display Glass Tabletop </p>
@@ -110,7 +110,7 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/35lmuC8" target="_blank">
+							<a href="https://amzn.to/2PjJk71" target="_blank">
 								<img src="images/product10.png" alt="h" class="product-img">
 								<div class="product-description">
 									<p>H Potter Glass Terrarium </p>
@@ -119,7 +119,7 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2rjaUsv" target="_blank">
+							<a href="https://amzn.to/2wEmv7D" target="_blank">
 								<img src="images/product25.jpg" alt="slant" class="product-img">
 								<div class="product-description">
 									<p>GLASS SLANT BOWL/GLASS TERRARIUM SET OF 2</p>
@@ -128,7 +128,7 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://www.amazon.com/dp/B000OAYXTK/ref=psdc_2975518011_t2_B00KSJP7A6" target="_blank">
+							<a href="https://amzn.to/2vYr1h7" target="_blank">
 								<img src="images/Product54.jpg" alt="hideg" class="product-img">
 								<div class="product-description">
 									<br/>
