--- a/CritterCare.html
+++ b/CritterCare.html
@@ -122,7 +122,7 @@
 				<table>
 					<tr>
 						<td class="product">
-							<a href="https://amzn.to/2Ep4ACw" target="_blank">
+							<a href="https://amzn.to/32kKIvu" target="_blank">
 								<img src="images/product18.png" alt="iso" class="product-img">
 								<div class="product-description">
 									<p>Critters Direct Live Springtails + Isopods, Combo Package </p>
@@ -131,7 +131,7 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2tzzi9R" target="_blank">
+							<a href="https://amzn.to/2wBpeyB" target="_blank">
 								<img src="images/product26.jpg" alt="spring" class="product-img">
 								<div class="product-description">
 									<br/>
@@ -141,7 +141,7 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2EFSTri" target="_blank">
+							<a href="https://amzn.to/37Tfay2" target="_blank">
 								<img src="images/product27.png" alt="iso" class="product-img">
 								<div class="product-description">
 									<br/>
