--- a/plants.html
+++ b/plants.html
@@ -61,7 +61,7 @@
 				<table>
 					<tr>
 						<td class="product">
-							<a href="https://amzn.to/2PI3bfD" target="_blank">
+							<a href="https://amzn.to/38OsmWd" target="_blank">
 								<img src="images/product4.jpg" alt="venus" class="product-img">
 								<div class="product-description">
 									<br/>
@@ -71,7 +71,7 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2PiIRm8" target="_blank">
+							<a href="https://amzn.to/38Osl4B" target="_blank">
 								<img src="images/product9.png" alt="mini" class="product-img">
 								<div class="product-description">
 									<p>Mini Ferns for Terrariums/Fairy Garden </p>
@@ -80,7 +80,7 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2PMI63O" target="_blank">
+							<a href="https://amzn.to/2Pirn8R" target="_blank">
 								<img src="images/product12.png" alt="5" class="product-img">
 								<div class="product-description">
 									<p>Succulent Plants (5 Pack), Fully Rooted in Planter Pots with Soil</p>
@@ -89,7 +89,7 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2LTLybA" target="_blank">
+							<a href="https://amzn.to/3c4QVA7" target="_blank">
 								<img src="images/product15.png" alt="3" class="product-img">
 								<div class="product-description">
 									<p>3 Small Sized B52 Giant Venus Flytraps</p>
@@ -100,7 +100,7 @@
 					</tr>
 					<tr>
 						<td class="product">
-							<a href="https://amzn.to/2RUivII" target="_blank">
+							<a href="https://amzn.to/2ST2mna" target="_blank">
 								<img src="images/product17.png" alt="sundew" class="product-img">
 								<div class="product-description">
 									<p>Cape Sundew - Drosera capensis</p>
@@ -109,7 +109,7 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/38EdCcV" target="_blank">
+							<a href="https://amzn.to/32j4vve" target="_blank">
 								<img src="images/product20.png" alt="fig" class="product-img">
 								<div class="product-description">
 									<p>Green Creeping Fig 2 Plants - Ficus - 3" Pot</p>
@@ -118,7 +118,7 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2sGoZRl" target="_blank">
+							<a href="https://amzn.to/3c12JDr" target="_blank">
 								<img src="images/product38.jpg" alt="m" class="product-img">
 								<div class="product-description">
 									<br/>
@@ -128,7 +128,7 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2ZMECmc" target="_blank">
+							<a href="https://amzn.to/3cbPDnc" target="_blank">
 								<img src="images/product39.jpg" alt="mu" class="product-img">
 								<div class="product-description">
 									<br/>
