Created file to rewrite urls to exclude .html file extension

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<li class="nav-dropdown">
 						<a href="shop.html" class="nav-dropdown-btn">Shop</a>
 						<ul class="nav-dropdown-content">
-							<a href="shop.html"><li>All</li></a>
+							<a href="shop"><li>All</li></a>
 							<a href="terrariums.html"><li>Terrariums</li></a>
 							<a href="materials.html"><li>Materials</li></a>
 							<a href="plants.html"><li>Plants</li></a>
